fix: logon/login pages css not fitting correct in lower resolutions
### Fix
CSS of the login and logon pages won't fit correctly on devices with lower resolutions

### Feat
Changing routes of pages and grouping them into correct sub-route:
 - /login &rarr; /account/login
 - /logon &rarr; /account/logon

 ### Issues Correted
 Issue #13 - css fix
 Issue #14 - page sub-route

--- a/src/app/pucar/src/pages/styles/global.css
+++ b/src/app/pucar/src/pages/styles/global.css
@@ -1,37 +1,47 @@
 * {
-    margin: 0;
-    padding: 0;
-    outline: 0;
-    box-sizing: border-box;
-    border: none;
-    text-decoration: none;
-  }
+  margin: 0;
+  padding: 0;
+  outline: 0;
+  box-sizing: border-box;
+  border: none;
+  text-decoration: none;
+}
 
+html {
+  font-size: 62.5%;
+}
+
+html,
+body,
+#root {
+  width: 100%;
+  height: 100vh;
+  margin: 0 auto;
+  min-height: 100%;
+}
+
+body {
+  background-color: #1b98e0;
+  color: #212121;
+  font-size: 1.6rem;
+  font-family: "Poppins", sans-serif;
+  -webkit-font-smoothing: antialiased;
+}
+
+input,
+button,
+textarea {
+  font-family: "Poppins", sans-serif;
+  font-size: 1.8rem;
+  -webkit-font-smoothing: antialiased;
+}
+
+button {
+  cursor: pointer;
+}
+
+@media (max-width: 759px) {
   html {
-    font-size: 62.5%;
+    font-size: 50%;
   }
-
-  html, body, #root{
-    width: 100%;
-    height : 100vh;
-    margin: 0 auto;
-    min-height: 100%;
-  }
-
-  body {
-    background-color: #1B98E0;
-    color: #212121;
-    font-size : 1.6rem;
-    font-family: 'Poppins', sans-serif;
-    -webkit-font-smoothing: antialiased;
-  }
-
-  input, button, textarea {
-    font-family: 'Poppins', sans-serif;
-    font-size: 1.8rem;
-    -webkit-font-smoothing: antialiased;
-  }
-
-  button { 
-    cursor: pointer;
-  }
+}
