--- a/src/app/pucar/src/pages/styles/login.css
+++ b/src/app/pucar/src/pages/styles/login.css
@@ -1,44 +1,36 @@
 #page-login {
-  width: 100vw;
-  height: 100vh;
+  display: flex;
+  flex: 1;
+  min-height: 100%;
+  justify-content: center;
+  align-items: center;
+  flex-direction: column;
   background-image: url("../../assets/img/bg.jpg");
+}
 
+.content-wrapper {
   display: flex;
+  flex: 1;
   justify-content: center;
+  align-items: center;
   text-align: center;
-  align-items: center;
-}
-
-#page-login .content-wrapper {
-  width: 100%;
+  flex-direction: column;
   max-width: 1100px;
-  height: 100%;
-  margin: 0 auto;
-  display: flex;
-  align-items: center;
-  flex-direction: column;
-  justify-content: center;
 }
 
-.content-wrapper .content-block {
-  margin-top: 2.5rem;
-  display: flex;
-  flex-direction: column;
+.content-block {
   background-color: #fff;
   height: auto;
-  width: 95%;
   border-radius: 2rem;
-  padding: 1.5rem;
-  justify-content: center;
-  align-items: center;
-  text-align: center;
+  padding: 1rem;
 }
 
 .logo-wrapper {
   display: flex;
   justify-content: center;
   align-items: center;
-  width: 40%;
+  margin: 2rem;
+  width: 50%;
 }
 
 .logo-wrapper .logo {
@@ -59,7 +51,7 @@
 
 .custom-button-logon {
   margin-top: 1.5rem;
-  width: 60%;
+  width: 100%;
   height: 4rem;
   display: flex;
   border-radius: 15px;
@@ -77,7 +69,7 @@
   align-items: center;
 }
 
-.description{
+.description {
   width: 80%;
   margin: 0 auto;
   color: #666666;
@@ -91,15 +83,11 @@
     background-image: url("../../assets/img/bg-mobile.jpg");
   }
 
-  #page-login .content-wrapper {
-    justify-content: center;
+  .content-wrapper {
+    justify-content: space-between;
   }
 
-  .content-wrapper .content-block {
-    margin-top: 0;
-    flex: 1;
-    height: 100%;
-    bottom: 0;
+  .content-block {
     width: 100%;
     border-radius: 2rem 2rem 0 0;
   }
